fixed portrait resizing and wrap

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -30,5 +30,5 @@ h4 {
 
 p {
     font-family: roboto-mono-light;
-    font-size: 0.85em;
+    font-size: 0.9em;
 }
