--- a/src/css/Intro.css
+++ b/src/css/Intro.css
@@ -4,18 +4,24 @@
 
 .intro-card {
     display: flex;
+    flex-wrap: wrap;
     background-color: rgba(255, 156, 238, 0.5);
-    /* background-color: #FF9CEE; */
-    /* color: black; */
+    align-items: flex-start;
 }
 
 .portrait {
-    padding: 20px 20px 20px 20px;
-    width: 250px;
-    align-self: flex-start;
+    width: 150px;
+    padding: 20px;
+    flex: 1 1 auto;
+    /* max-height: 400px; */
+    /* width: 100%; */
+    /* min-width: 300px;
+    max-height: 400px */
 }
 
 .intro-text {
-    padding: 20px 20px 20px 20px;
-    flex: 1 1 auto;
+    /* min-width: 200px; */
+    width: 400px;
+    padding: 20px;
+    flex: 1 3 auto;
 }
